# JavaVersionManager

./: .env  .gitignore  Cargo.toml  PATH  README.md  jvman.cmd  jvman.ps1  versions.toml  x64.iss
src/: java_remote.rs  java_ver.rs  lib.rs  main.rs
src/utils/: mod.rs  release_utils.rs  uac_utils.rs  ziputil.rs
test/: parser_test.rs  release
tests/: parser_test.rs  releases.json
