[package]
edition = "2021"
name = "jvman"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.10", features = ["derive"]}
download_rs = {version = "0.2.0", features = ["sync_download"]}
http = "0.2.6"
json = "0.12.4"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
toml = "0.5"
zip = "0.5.13"
dotenv = "0.15.0"
